--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Vue Slider</title>
 
   <link rel="icon" href="favicon.ico" type="image/ico" />
 
@@ -15,9 +15,11 @@
     integrity='sha512-D1liES3uvDpPrgk7vXR/hR/sukGn7EtDWEyvpdLsyalQYq6v6YUsTUJmku7B4rcuQ21rf0UTksw2i/2Pdjbd3g=='
     crossorigin='anonymous' />
 
-
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Vue -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
   <!-- JavaScript -->
   <script src="js/data.js"></script>
